--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(SRB2OldPatcher C)
 
 
-add_library(${PROJECT_NAME}
+add_executable(${PROJECT_NAME}
 	src/file.c
 	src/init.c
 	src/main.c
